fixed overflow y on mobile

--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -96,7 +96,7 @@
     .main-banner .shapes-bg h2 {
         font-size: 18px;
         bottom: 65px;
-        left: 10px;
+        left: 0px;
     }
 }
 
