--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,6 +9,7 @@
 @import 'components/footer';
 
 
+
 body {
     background: $bg-color;
     color: white;
@@ -55,7 +56,7 @@ section {
 .fa-arrow-circle-down {
     position: fixed;
     bottom: 10px;
-    right: 1%;
+    right: 10px;
     text-align: center;
     margin: 0 auto;
     font-size: 50px;
